--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
 <html lang="it-IT">
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="stylesheet" href="./style/styles.css" />
-    </head>
-    <body>
-        <img alt="Linux Day Print" src="./img/linux-day.jpeg" />
-    </body>
+
+<head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./style/styles.css" />
+    <script src="./script/fill-agenda-table.js" defer></script>
+</head>
+
+<body>
+    <div>
+        <div class="">
+            <h1>Linux Day</h1>
+            <h3>18 Novembre 2023</h3>
+        </div>
+        <div>
+            <div>
+                <table id="programma">
+                    <tr>
+                        <th>Orario</th>
+                        <th>Sala</th>
+                        <th>Speaker</th>
+                        <th>Titolo</th>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <img alt="Linux Day Print" src="./img/linux-day.jpeg" />
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
