--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 </head>
 
 <body>
-    <div>
-        <div class="">
+    <div class="container">
+        <div class="title">
             <h1>Linux Day</h1>
             <h3>18 Novembre 2023</h3>
         </div>
-        <div>
-            <div>
+        <div class="main">
+            <div class="linux-day-logo-container">
+                <img width="600" height="600" class="linux-day-logo" alt="Linux Day Print" src="./img/linux-day.jpeg" />
+            </div>
+            <div class="agenda">
                 <table id="programma">
                     <tr>
                         <th>Orario</th>
@@ -23,10 +26,7 @@
                         <th>Titolo</th>
                     </tr>
                 </table>
-            </div>
-            <div>
-                <img alt="Linux Day Print" src="./img/linux-day.jpeg" />
-            </div>
+            </div>            
         </div>
     </div>
 </body>
