feat: Completed style

--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 
 <body>
     <div class="container">
-        <div class="title">
-            <h1>Linux Day</h1>
-            <h3>18 Novembre 2023</h3>
+        <div class="header">
+            <div class="title">
+                <h1>Linux Day</h1>
+            </div>
+            <div class="subtitle">
+                <h3>18 Novembre 2023</h3>
+            </div>
         </div>
         <div class="main">
             <div class="linux-day-logo-container">
-                <img width="600" height="600" class="linux-day-logo" alt="Linux Day Print" src="./img/linux-day.jpeg" />
+                <img width="350" height="350" class="linux-day-logo" alt="Linux Day Print" src="./img/linux-day.jpeg" />
             </div>
             <div class="agenda">
                 <table id="programma">
@@ -26,7 +30,7 @@
                         <th>Titolo</th>
                     </tr>
                 </table>
-            </div>            
+            </div>
         </div>
     </div>
 </body>
