chore: Introduced bug

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./style/styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <script src="./script/fill-agenda-table.js" defer></script>
 </head>
 
